--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
-    "jsx": "react",   
+    "jsx": "react",
+    "types": ["d3"],
+    "lib": ["es2017", "dom"],
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
@@ -10,12 +13,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": [
-    "src/**/*", 
-    "src/types/**/*.d.ts"
-  ],
-  "exclude": [
-    "node_modules", 
-    "dist" 
-  ]
+  "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
