--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/node": "^22.10.0",
     "@types/topojson-client": "^3.1.5"
   }
 }
